@@ -609,12 +609,14 @@ Default examples of these files are provided under: {{{$DDS_ROOT/dds/DCPS/transp
 [[Known Issues]]
 [[Future Tasks]]</pre>
 </div>
-<div title="Future Tasks" modifier="StevenStallion" created="200912011940" modified="200912120031" changecount="36">
+<div title="Future Tasks" modifier="StevenStallion" created="200912011940" modified="200912151733" changecount="37">
 <pre>An FEC mechanism should be introduced to reduce repair requests and to provide an additional source from which to detect reception gaps.
 
 {{{MULTICAST_SYNACK}}} responses should be predicated on association status to prevent potential denial of service attacks (not currently supported by the ETF).
 
-{{{DataLink}}}s should initiate the removal of an association based on changes in reliability (not currently supported by the ETF).</pre>
+{{{DataLink}}}s should initiate the removal of an association based on changes in reliability (not currently supported by the ETF).
+
+{{{TransportImpl::connection_info_i}}} should permit use of ephemeral ports (not currently supported by the ETF).</pre>
 </div>
 <div title="Known Issues" modifier="StevenStallion" created="200912012032" modified="200912141627" changecount="46">
 <pre>{{{TRANSPORT_PRIORITY}}} is not directly supported. This is partially due to routing restrictions placed on default group addresses as the selection heuristic assigns from the link-local range. Setting the TOS would provide little to no benefit for non-default group addresses at the cost of additional resources and complexity managing n-ary associations by priority key.
